--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>spring-boot-mq</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
